--- a/index.html
+++ b/index.html
@@ -458,6 +458,25 @@ const TRIAD_DEFS = [
     { name: 'Tritone (doubled root)', steps: [0, 6, 12] },
     { name: 'Maj9 (no 3rd, no 5th)', steps: [0, 2, 11] },
     { name: 'Dom9 (no 3rd, no 5th)', steps: [0, 2, 10] },
+    { name: 'Dom9 (no 3rd, no 5th)', steps: [0, 2, 10] },
+    { name: 'm6/M7 Cluster', steps: [0, 8, 11] },
+    { name: 'Ab/C (no 5th)', steps: [0, 8, 12] },
+    { name: 'Am/C (no 5th)', steps: [0, 9, 12] },
+    { name: 'M6/M7 Cluster', steps: [0, 9, 11] },
+    { name: 'Cm7(b13) (no 5th)', steps: [0, 8, 10] },
+    { name: 'b2/TT Cluster', steps: [0, 1, 6] },
+    { name: 'sus(b2)', steps: [0, 1, 7] },
+    { name: 'Dbmaj7/C', steps: [0, 1, 8] },
+    { name: 'b2/M6 Cluster', steps: [0, 1, 9] },
+    { name: 'C7(b9) (no 3rd)', steps: [0, 1, 10] },
+    { name: 'b2/M7 Cluster', steps: [0, 1, 11] },
+    { name: 'Minor 2nd (doubled root)', steps: [0, 1, 12] },
+    { name: 'Ab/C (no 5th)', steps: [0, 8, 12] },
+    { name: 'm6/M7 Cluster', steps: [0, 8, 11] },
+    { name: 'm6/M6 Cluster', steps: [0, 8, 9] },
+    { name: 'Bb/C (sus2)', steps: [0, 10, 12] },
+    { name: 'm7/M7 Cluster', steps: [0, 10, 11] },
+    { name: 'C13 (no 3rd, no 5th)', steps: [0, 9, 10] },
 ];
 const TETRAD_DEFS = [
     // --- Basic Triads + Octave ---
