--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@ const TRIAD_DEFS = [
     { name: 'Bb/C (sus2)', steps: [0, 10, 12] },
     { name: 'm7/M7 Cluster', steps: [0, 10, 11] },
     { name: 'C13 (no 3rd, no 5th)', steps: [0, 9, 10] },
+    { name: 'Major 7th (double root)', steps: [0, 11, 12] },
 ];
 const TETRAD_DEFS = [
     // --- Basic Triads + Octave ---
