--- a/index.html
+++ b/index.html
@@ -446,18 +446,15 @@ const TRIAD_DEFS = [
     { name: 'D# dim (1st inv)', steps: [0, 6, 9] },
     { name: 'AMaj7#11 (shell)', steps: [0, 6, 11] },
     { name: 'FMaj7/A (no 3rd)', steps: [0, 7, 8] },
-    // --- NEWLY ADDED CHORDS ---
     { name: 'sus2 (no 5th)', steps: [0, 2, 12] },
     { name: 'Minor (no 5th)', steps: [0, 3, 12] },
     { name: 'Major (no 5th)', steps: [0, 4, 12] },
     { name: 'Quartal Octave Frame', steps: [0, 5, 12] },
     { name: 'Power Chord (doubled root)', steps: [0, 7, 12] },
-    { name: 'Augmented sus2 (no 3rd)', steps: [0, 2, 8] },
     { name: 'Minor add9 (no 5th)', steps: [0, 3, 14] },
     { name: 'Major add9 (no 5th)', steps: [0, 4, 14] },
     { name: 'Tritone (doubled root)', steps: [0, 6, 12] },
     { name: 'Maj9 (no 3rd, no 5th)', steps: [0, 2, 11] },
-    { name: 'Dom9 (no 3rd, no 5th)', steps: [0, 2, 10] },
     { name: 'Dom9 (no 3rd, no 5th)', steps: [0, 2, 10] },
     { name: 'm6/M7 Cluster', steps: [0, 8, 11] },
     { name: 'Ab/C (no 5th)', steps: [0, 8, 12] },
@@ -471,13 +468,54 @@ const TRIAD_DEFS = [
     { name: 'C7(b9) (no 3rd)', steps: [0, 1, 10] },
     { name: 'b2/M7 Cluster', steps: [0, 1, 11] },
     { name: 'Minor 2nd (doubled root)', steps: [0, 1, 12] },
-    { name: 'Ab/C (no 5th)', steps: [0, 8, 12] },
-    { name: 'm6/M7 Cluster', steps: [0, 8, 11] },
     { name: 'm6/M6 Cluster', steps: [0, 8, 9] },
     { name: 'Bb/C (sus2)', steps: [0, 10, 12] },
     { name: 'm7/M7 Cluster', steps: [0, 10, 11] },
     { name: 'C13 (no 3rd, no 5th)', steps: [0, 9, 10] },
     { name: 'Major 7th (double root)', steps: [0, 11, 12] },
+    // --- Wide Voicings & Extended Shells (NEW) ---
+    { name: 'Major Triad (Spread)', steps: [0, 4, 19] },
+    { name: 'Major 2nd Inv (Spread)', steps: [0, 7, 16] },
+    { name: 'Minor Triad (Spread)', steps: [0, 3, 19] },
+    { name: 'Minor 2nd Inv (Spread)', steps: [0, 7, 15] },
+    { name: 'sus2 Triad (Spread)', steps: [0, 2, 19] },
+    { name: 'sus4 Triad (Spread)', steps: [0, 5, 19] },
+    { name: 'sus4 2nd Inv (Spread)', steps: [0, 7, 17] },
+    { name: 'Diminished Triad (Spread)', steps: [0, 3, 18] },
+    { name: 'Diminished 2nd Inv (Spread)', steps: [0, 6, 15] },
+    { name: 'Augmented Triad (Spread)', steps: [0, 4, 20] },
+    { name: 'Augmented 2nd Inv (Spread)', steps: [0, 8, 16] },
+    { name: 'Dominant 7(b9) shell', steps: [0, 4, 13] },
+    { name: 'Dominant 7(#9) shell', steps: [0, 4, 15] },
+    { name: 'Major 9 shell (R,7,9)', steps: [0, 11, 14] },
+    { name: 'Dominant 9 shell (R,m7,9)', steps: [0, 10, 14] },
+    { name: 'Dominant 11 shell (R,m7,11)', steps: [0, 10, 17] },
+    { name: 'Lydian shell (R,3,#11)', steps: [0, 4, 18] },
+    { name: 'Major 13 shell (R,3,13)', steps: [0, 4, 21] },
+    { name: 'Minor 13 shell (R,m3,13)', steps: [0, 3, 21] },
+    { name: 'Dominant 13 shell (R,m7,13)', steps: [0, 10, 21] },
+    { name: 'Octave & Minor 9th', steps: [0, 12, 13] },
+    { name: 'Octave & Major 9th', steps: [0, 12, 14] },
+    { name: 'Octave & Major 10th', steps: [0, 12, 16] },
+    { name: 'Octave & Perfect 12th', steps: [0, 12, 19] },
+    { name: 'Fifth & Double Octave', steps: [0, 7, 24] },
+    { name: 'Fourth & Double Octave', steps: [0, 5, 24] },
+    { name: 'Major Third & Double Octave', steps: [0, 4, 24] },
+    { name: 'Minor Third & Double Octave', steps: [0, 3, 24] },
+    { name: 'Major Second & Double Octave', steps: [0, 2, 24] },
+    { name: 'Minor 7th & Double Octave', steps: [0, 10, 24]},
+    { name: 'Major 7th & Double Octave', steps: [0, 11, 24]},
+    { name: 'Octave and a half', steps: [0, 12, 18]},
+    { name: 'Wide Minor 7th', steps: [0, 10, 19]},
+    { name: 'Wide Major 7th', steps: [0, 11, 19]},
+    { name: 'Dreamy Fourth', steps: [0, 5, 16]},
+    { name: 'Open Tritone', steps: [0, 6, 19]},
+    { name: 'Lydian Quintal', steps: [0, 7, 18]},
+    { name: 'Quartal 9th', steps: [0, 5, 14]},
+    { name: 'Major 7th & 11th', steps: [0, 11, 17]},
+    { name: '6/9 shell', steps: [0, 9, 14] },
+    { name: 'Lydian add9 shell', steps: [0, 6, 16] },
+    { name: 'Major 9 (Spread shell)', steps: [0, 2, 16] },
 ];
 const TETRAD_DEFS = [
     // --- Basic Triads + Octave ---
@@ -540,24 +578,16 @@ const TETRAD_DEFS = [
     { name: 'Dominant 7th (b9) (no 5th)', steps: [0, 4, 10, 13] },
     { name: 'Hendrix Chord (7#9)', steps: [0, 4, 10, 15] },
     { name: 'Dominant 7th (b5)', steps: [0, 4, 6, 10] },
-    { name: 'Dominant 7th (#5)', steps: [0, 4, 8, 10] }, // Same as Augmented 7th
     { name: 'Dominant 7th (#11) (no 5th)', steps: [0, 4, 10, 18] },
     { name: 'Major 7th (b5)', steps: [0, 4, 6, 11] },
-    { name: 'Major 7th (#5)', steps: [0, 4, 8, 11] }, // Same as Augmented-Major 7th
     { name: 'Major 7th (#11) (no 5th)', steps: [0, 4, 11, 18] },
-    { name: 'Minor 7th (b5)', steps: [0, 3, 6, 10] }, // Same as Half-Diminished 7th
     { name: 'Dominant 13th (shell)', steps: [0, 4, 10, 21] },
     { name: 'Minor 13th (shell)', steps: [0, 3, 10, 21] },
     { name: 'Altered Dominant (7b9b13)', steps: [0, 4, 10, 20] },
 
     // --- Diatonic & Modal Chords (from Major Scale) ---
-    { name: 'I Maj7', steps: [0, 4, 7, 11] },
-    { name: 'ii min7', steps: [0, 3, 7, 10] },
-    { name: 'iii min7', steps: [0, 2, 5, 9] },
     { name: 'IV Maj7', steps: [0, 5, 9, 12] },
-    { name: 'V7', steps: [0, 4, 7, 10] },
     { name: 'vi min7', steps: [0, 3, 7, 8] },
-    { name: 'vii m7(b5)', steps: [0, 3, 6, 10] },
 
     // --- Other Named & Quartal Chords ---
     { name: 'Italian Aug 6th', steps: [0, 4, 6, 12] },
@@ -572,6 +602,57 @@ const TETRAD_DEFS = [
     { name: 'Quartal Voicing (P4, Aug4, P4)', steps: [0, 5, 11, 16] },
     { name: 'Whole Tone Fragment', steps: [0, 2, 4, 8] },
     { name: 'Chromatic Cluster', steps: [0, 1, 2, 3] },
+    
+    // --- Wide Voicings & Extended Shells (NEW) ---
+    { name: 'Major add9', steps: [0, 4, 7, 14] },
+    { name: 'Minor add9', steps: [0, 3, 7, 14] },
+    { name: 'Major 9 (no 3rd)', steps: [0, 7, 11, 14] },
+    { name: 'Dominant 9 (no 3rd)', steps: [0, 7, 10, 14] },
+    { name: 'Minor 9 (no 3rd)', steps: [0, 7, 10, 15] },
+    { name: 'Lydian Chord', steps: [0, 4, 7, 18] },
+    { name: '11th (Kenny Barron)', steps: [0, 7, 10, 17] },
+    { name: 'Dom7(#11) (no 3rd)', steps: [0, 7, 10, 18] },
+    { name: 'Maj7(#11) (no 3rd)', steps: [0, 7, 11, 18] },
+    { name: 'Major 13 (no 5th)', steps: [0, 4, 11, 21] },
+    { name: 'Dom13 (no 3rd)', steps: [0, 7, 10, 21] },
+    { name: 'Maj13 (no 3rd)', steps: [0, 7, 11, 21] },
+    { name: 'add9 (R,5,8)', steps: [0, 7, 12, 14] },
+    { name: 'Maj7 (Spread 1)', steps: [0, 4, 11, 19] },
+    { name: 'Maj7 (Spread 2)', steps: [0, 7, 11, 16] },
+    { name: 'm7 (Spread 1)', steps: [0, 3, 10, 19] },
+    { name: 'm7 (Spread 2)', steps: [0, 7, 10, 15] },
+    { name: 'Dom7 (Spread 1)', steps: [0, 4, 10, 19] },
+    { name: 'Dom7 (Spread 2)', steps: [0, 7, 10, 16] },
+    { name: 'm7b5 (Spread)', steps: [0, 6, 10, 15] },
+    { name: 'dim7 (Spread)', steps: [0, 6, 9, 15] },
+    { name: 'Quintal Stack', steps: [0, 7, 14, 21] },
+    { name: 'Open Quintal-Quartal', steps: [0, 7, 14, 19] },
+    { name: 'Open Quartal-Quintal', steps: [0, 5, 10, 22] },
+    { name: 'R,5,8,11 Voicing', steps: [0, 7, 12, 17] },
+    { name: 'R,4,8,M7 Voicing', steps: [0, 5, 12, 23] },
+
+    // --- Further Comprehensive Additions (NEW) ---
+    { name: 'Maj7 (Drop 2)', steps: [0, 5, 9, 16] },
+    { name: 'm7 (Drop 2)', steps: [0, 5, 8, 15] },
+    { name: 'Dom7 (Drop 2)', steps: [0, 5, 8, 16] },
+    { name: 'm7b5 (Drop 2)', steps: [0, 6, 9, 15] },
+    { name: 'Altered Dom (b9,#11)', steps: [0, 10, 13, 18] },
+    { name: 'Altered Dom (#9,#11)', steps: [0, 10, 15, 18] },
+    { name: 'Altered Dom (#9,b13)', steps: [0, 10, 15, 20] },
+    { name: 'Altered Dom (Gb/C)', steps: [0, 6, 10, 13] },
+    { name: 'Lydian Quartal 2', steps: [0, 6, 11, 17] },
+    { name: 'Quartal Maj7', steps: [0, 5, 10, 16] },
+    { name: 'Wide Augmented Maj7', steps: [0, 8, 11, 16] },
+    { name: 'R,5,8,10 Voicing', steps: [0, 7, 12, 16] },
+    { name: 'R,5,8,b13 Voicing', steps: [0, 7, 12, 20] },
+    { name: 'R,3,8,11 Voicing', steps: [0, 4, 12, 17] },
+    { name: 'R,5,11,13 Voicing', steps: [0, 7, 17, 21] },
+    { name: 'R,3,10,13 Voicing', steps: [0, 4, 16, 21] },
+    { name: 'Power Chord + 8va, D8va', steps: [0, 7, 12, 24] },
+    { name: 'Major Third + 8va, D8va', steps: [0, 4, 12, 24] },
+    { name: 'Fifth + 12th + D8va', steps: [0, 7, 19, 24] },
+    { name: 'Octave + 10th + D8va', steps: [0, 12, 16, 24] },
+    { name: 'Octave + 12th + D8va', steps: [0, 12, 19, 24] },
 ];
             const PSEUDO_DYAD_DEFS = [{ name: 'Pseudo Octave', partials: [0, 1] }, { name: 'Pseudo Fifth', partials: [1, 2] }]; const PSEUDO_TRIAD_DEFS = [{ name: 'Pseudo Major Triad', partials: [3, 4, 5] }, { name: 'Pseudo Minor Triad', partials: [9, 11, 14] }]; const PSEUDO_TETRAD_DEFS = [{ name: 'Pseudo Dom 7th', partials: [3, 4, 5, 6] }];
             function centsToRatio(cents) { return 2 ** (cents / 1200); }
