--- a/index.html
+++ b/index.html
@@ -473,7 +473,9 @@ const TRIAD_DEFS = [
     { name: 'm7/M7 Cluster', steps: [0, 10, 11] },
     { name: 'C13 (no 3rd, no 5th)', steps: [0, 9, 10] },
     { name: 'Major 7th (double root)', steps: [0, 11, 12] },
-    // --- Wide Voicings & Extended Shells (NEW) ---
+
+    // --- Comprehensive Wide & Extended Voicings (NEW) ---
+    // Spread Triads
     { name: 'Major Triad (Spread)', steps: [0, 4, 19] },
     { name: 'Major 2nd Inv (Spread)', steps: [0, 7, 16] },
     { name: 'Minor Triad (Spread)', steps: [0, 3, 19] },
@@ -485,6 +487,17 @@ const TRIAD_DEFS = [
     { name: 'Diminished 2nd Inv (Spread)', steps: [0, 6, 15] },
     { name: 'Augmented Triad (Spread)', steps: [0, 4, 20] },
     { name: 'Augmented 2nd Inv (Spread)', steps: [0, 8, 16] },
+    { name: 'Major Triad (Wide 2nd Inv)', steps: [0, 5, 16] },
+    { name: 'Minor Triad (Wide 2nd Inv)', steps: [0, 5, 15] },
+    // Spread 7th Shells & Inversions
+    { name: 'Major 7th (no 5, Spread)', steps: [0, 11, 16] },
+    { name: 'Dominant 7th (no 5, Spread)', steps: [0, 10, 16] },
+    { name: 'Minor 7th (1st Inv, Spread)', steps: [0, 9, 19] },
+    { name: 'Fmaj7/C (2nd Inv)', steps: [0, 9, 17] },
+    { name: 'Fm7/C (2nd Inv)', steps: [0, 8, 17] },
+    { name: 'Eb/C (2nd Inv)', steps: [0, 10, 15] },
+    { name: 'Fmaj7(#11)/C (Lydian)', steps: [0, 11, 17] },
+    // Extended Shell Voicings
     { name: 'Dominant 7(b9) shell', steps: [0, 4, 13] },
     { name: 'Dominant 7(#9) shell', steps: [0, 4, 15] },
     { name: 'Major 9 shell (R,7,9)', steps: [0, 11, 14] },
@@ -494,28 +507,37 @@ const TRIAD_DEFS = [
     { name: 'Major 13 shell (R,3,13)', steps: [0, 4, 21] },
     { name: 'Minor 13 shell (R,m3,13)', steps: [0, 3, 21] },
     { name: 'Dominant 13 shell (R,m7,13)', steps: [0, 10, 21] },
-    { name: 'Octave & Minor 9th', steps: [0, 12, 13] },
-    { name: 'Octave & Major 9th', steps: [0, 12, 14] },
-    { name: 'Octave & Major 10th', steps: [0, 12, 16] },
-    { name: 'Octave & Perfect 12th', steps: [0, 12, 19] },
-    { name: 'Fifth & Double Octave', steps: [0, 7, 24] },
-    { name: 'Fourth & Double Octave', steps: [0, 5, 24] },
-    { name: 'Major Third & Double Octave', steps: [0, 4, 24] },
-    { name: 'Minor Third & Double Octave', steps: [0, 3, 24] },
-    { name: 'Major Second & Double Octave', steps: [0, 2, 24] },
-    { name: 'Minor 7th & Double Octave', steps: [0, 10, 24]},
-    { name: 'Major 7th & Double Octave', steps: [0, 11, 24]},
-    { name: 'Octave and a half', steps: [0, 12, 18]},
-    { name: 'Wide Minor 7th', steps: [0, 10, 19]},
-    { name: 'Wide Major 7th', steps: [0, 11, 19]},
-    { name: 'Dreamy Fourth', steps: [0, 5, 16]},
-    { name: 'Open Tritone', steps: [0, 6, 19]},
-    { name: 'Lydian Quintal', steps: [0, 7, 18]},
-    { name: 'Quartal 9th', steps: [0, 5, 14]},
-    { name: 'Major 7th & 11th', steps: [0, 11, 17]},
+    { name: 'Major 6th (no 5, spread)', steps: [0, 9, 16] },
+    // Quartal, Quintal and Other Voicings
+    { name: 'Lydian Quintal', steps: [0, 7, 18] },
+    { name: 'Quartal (R,4,9)', steps: [0, 5, 14] },
+    { name: 'Dbmaj7(#5)/C Shell', steps: [0, 8, 14] },
+    { name: 'Open Tritone', steps: [0, 6, 19] },
+    { name: 'Dreamy Fourth', steps: [0, 5, 16] },
+    { name: 'Major 7th & 11th', steps: [0, 11, 17] },
     { name: '6/9 shell', steps: [0, 9, 14] },
     { name: 'Lydian add9 shell', steps: [0, 6, 16] },
     { name: 'Major 9 (Spread shell)', steps: [0, 2, 16] },
+    // Octave Frame Voicings
+    { name: 'sus4 (Doubled Root Frame)', steps: [0, 12, 17] },
+    { name: 'Octave & Minor 9th', steps: [0, 12, 13] },
+    { name: 'Octave & Major 9th', steps: [0, 12, 14] },
+    { name: 'Minor 3rd (Octave Frame)', steps: [0, 12, 15] },
+    { name: 'Major 3rd (Octave Frame)', steps: [0, 12, 16] },
+    { name: 'Tritone (Octave Frame)', steps: [0, 12, 18] },
+    { name: 'Octave & Perfect 12th', steps: [0, 12, 19] },
+    { name: 'Minor 6th (Octave Frame)', steps: [0, 12, 20] },
+    { name: 'Major 6th (Octave Frame)', steps: [0, 12, 21] },
+    { name: 'Minor 7th (Octave Frame)', steps: [0, 12, 22] },
+    { name: 'Major 7th (Octave Frame)', steps: [0, 12, 23] },
+    // Double Octave Voicings
+    { name: 'Major Second & Double Octave', steps: [0, 2, 24] },
+    { name: 'Minor Third & Double Octave', steps: [0, 3, 24] },
+    { name: 'Major Third & Double Octave', steps: [0, 4, 24] },
+    { name: 'Fourth & Double Octave', steps: [0, 5, 24] },
+    { name: 'Fifth & Double Octave', steps: [0, 7, 24] },
+    { name: 'Minor 7th & Double Octave', steps: [0, 10, 24] },
+    { name: 'Major 7th & Double Octave', steps: [0, 11, 24] },
 ];
 const TETRAD_DEFS = [
     // --- Basic Triads + Octave ---
