--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 </header>
                 <main>
                     <div class="flex justify-center mb-8">
-                         <img src="https://i.imgur.com/8F2Ab3B.png" alt="Spinning Pear Logo" class="w-24 h-24 animate-spin" style="animation-duration: 3s;" onerror="this.onerror=null;this.src='https://placehold.co/96x96/000000/FFFFFF?text=Pear'"/>
+                         <img src="pear-logo.jpg" alt="Spinning Pear Logo" class="w-24 h-24 animate-spin" style="animation-duration: 3s;">
                     </div>
                     <p class="text-green-400 text-xl mb-6">Click on a topic to explore!</p>
                     <div class="grid grid-cols-2 md:grid-cols-4 gap-8 max-w-2xl mx-auto items-start">
@@ -201,7 +201,7 @@
                             </div>
                             <div id="music-icon-nav" class="cursor-pointer transform group-hover:scale-110 transition-transform">
                                 <div class="bg-indigo-800 p-4 rounded-lg border-4 border-dashed border-pink-500">
-                                     <img src="https://i.imgur.com/so57a7E.png" alt="Music Icon" class="w-full h-auto mx-auto rounded-md" onerror="this.onerror=null;this.src='https://placehold.co/128x128/4338CA/FFFFFF?text=Music'"/>
+                                     <img src="music-icon.jpg" alt="Music Icon" class="w-full h-auto mx-auto rounded-md">
                                 </div>
                                 <p class="mt-2 text-xl font-vt323 text-white">Music Dissonance</p>
                             </div>
@@ -210,7 +210,7 @@
                         <div class="group relative text-center">
                             <div id="physics-icon-nav" class="cursor-pointer transform group-hover:scale-110 transition-transform">
                                 <div class="bg-indigo-800 p-4 rounded-lg border-4 border-dashed border-pink-500">
-                                    <img src="https://i.imgur.com/xYgYfH7.png" alt="Standard Model Icon" class="w-full h-auto mx-auto rounded-md" onerror="this.onerror=null;this.src='https://placehold.co/128x128/4338CA/FFFFFF?text=Physics'"/>
+                                    <img src="physics-icon.jpg" alt="Standard Model Icon" class="w-full h-auto mx-auto rounded-md">
                                 </div>
                                 <p class="mt-2 text-xl font-vt323 text-white">Quantum Physics</p>
                             </div>
@@ -224,44 +224,6 @@
                 <footer class="mt-12">
                     <p class="text-sm text-gray-400">&copy; 1991 Pearplexed. All rights reserved. Not really though.</p>
                 </footer>
-            </div>
-        </div>
-
-        <!-- Music Visualization Page -->
-        <div id="music-page" class="hidden min-h-screen bg-gray-900 p-4 md:p-8 relative flex flex-col">
-            <div class="container mx-auto flex flex-col flex-grow">
-                <header class="flex justify-between items-center mb-4 flex-shrink-0">
-                    <h1 class="text-4xl md:text-6xl font-vt323 text-teal-300">Music Dissonance</h1>
-                    <div class="flex items-center gap-4">
-                        <button id="how-it-works-button" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">How it Works</button>
-                        <button id="back-button" class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">&lt; Back to Home</button>
-                    </div>
-                </header>
-                <main class="bg-gray-800 rounded-lg shadow-lg border-2 border-blue-500 flex-grow relative">
-                    <div id="music-explorer-container"></div>
-                </main>
-            </div>
-        </div>
-        <!-- Standard Model Page -->
-        <div id="physics-page" class="hidden min-h-screen bg-gray-900 p-4 md:p-8 relative flex flex-col">
-            <div class="container mx-auto flex flex-col flex-grow">
-                <header class="flex justify-between items-center mb-4 flex-shrink-0">
-                    <h1 class="text-4xl md:text-6xl font-vt323 text-teal-300">Quantum Physics</h1>
-                    <div class="flex items-center gap-4">
-                        <button id="back-from-physics"
-                                class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">
-                            &lt; Back to Home
-                        </button>
-                    </div>
-                </header>
-
-                <main class="bg-gray-800 rounded-lg shadow-lg border-2 border-blue-500 flex-grow relative">
-                    <iframe id="standard-model-frame"
-                            src="standard-model.html"
-                            title="Interactive Standard Model"
-                            style="width:100%; height:100vh; border:0; border-radius:0.5rem; background:#111827;">
-                    </iframe>
-                </main>
             </div>
         </div>
     
