--- a/index.html
+++ b/index.html
@@ -226,6 +226,44 @@
                 </footer>
             </div>
         </div>
+
+        <!-- Music Visualization Page -->
+        <div id="music-page" class="hidden min-h-screen bg-gray-900 p-4 md:p-8 relative flex flex-col">
+            <div class="container mx-auto flex flex-col flex-grow">
+                <header class="flex justify-between items-center mb-4 flex-shrink-0">
+                    <h1 class="text-4xl md:text-6xl font-vt323 text-teal-300">Music Dissonance</h1>
+                    <div class="flex items-center gap-4">
+                        <button id="how-it-works-button" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">How it Works</button>
+                        <button id="back-button" class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">&lt; Back to Home</button>
+                    </div>
+                </header>
+                <main class="bg-gray-800 rounded-lg shadow-lg border-2 border-blue-500 flex-grow relative">
+                    <div id="music-explorer-container"></div>
+                </main>
+            </div>
+        </div>
+        <!-- Standard Model Page -->
+        <div id="physics-page" class="hidden min-h-screen bg-gray-900 p-4 md:p-8 relative flex flex-col">
+            <div class="container mx-auto flex flex-col flex-grow">
+                <header class="flex justify-between items-center mb-4 flex-shrink-0">
+                    <h1 class="text-4xl md:text-6xl font-vt323 text-teal-300">Quantum Physics</h1>
+                    <div class="flex items-center gap-4">
+                        <button id="back-from-physics"
+                                class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">
+                            &lt; Back to Home
+                        </button>
+                    </div>
+                </header>
+
+                <main class="bg-gray-800 rounded-lg shadow-lg border-2 border-blue-500 flex-grow relative">
+                    <iframe id="standard-model-frame"
+                            src="standard-model.html"
+                            title="Interactive Standard Model"
+                            style="width:100%; height:100vh; border:0; border-radius:0.5rem; background:#111827;">
+                    </iframe>
+                </main>
+            </div>
+        </div>
     
         
         <!-- How It Works Page -->
