--- a/index.html
+++ b/index.html
@@ -1596,7 +1596,7 @@ const TETRAD_DEFS = [
                      target.classList.add('flex');
                 }
             }
-            // If going back home, ensure it's visible even if it wasn't flex before
+            // If going back home, ensure it's visible even if it wasn't flex before this
             if (target === homePage) {
                 homePage.classList.remove('hidden');
             }
